# Enterprise-Grade-RAG-System-for-Banking-Knowledge-Intelligence

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.py  test.py
config/: settings.yaml
src/api/: app.py  routes_debug.py  routes_kb.py  routes_query.py
src/embedding/: embedder.py
src/guardrails/: hallucination.py
src/ingestion/: extractor.py  loaders.py
src/kb/: kb_service.py  kb_store.py
src/observability/: logger.py
src/preprocessing/: chunking.py  clean_normalize.py
src/rag/: pipeline.py  prompts.py
src/retrieval/: reranker.py  retriever.py
src/security/: token_manager.py
src/ui/: streamlit_app.py
src/utils/: __init__.py
src/vectorstore/: faiss_store.py
